--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 82a559b9
-	trimbase = 
+	base = 90a575ef
+	trimbase = 82a559b9
 	parent = upstream
 	previous = ba623ee0
