--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 84a75ca0
-	trimbase = 
+	base = abfd03da
+	trimbase = 84a75ca0
 	parent = upstream
 	previous = ba623ee0
