--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
 	base = 24d55ad0
-	trimbase = 190a34e9
+	trimbase = 
 	parent = upstream
 	previous = ba623ee0
