--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = 57d752c5
-	trimbase = 
+	base = c4d78295
+	trimbase = 57d752c5
 	parent = upstream
 	previous = ba623ee0
