--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 87130357
-	trimbase = 
+	base = bfadf0ec
+	trimbase = 87130357
 	parent = upstream
 	previous = ba623ee0
