--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
 	base = aae7377f
-	trimbase = e77d2e12
+	trimbase = 
 	parent = upstream
 	previous = ba623ee0
