--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 3f742d61
-	trimbase = 
+	base = 48de620f
+	trimbase = 3f742d61
 	parent = upstream
 	previous = ba623ee0
