--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 43981a20
-	trimbase = 
+	base = 04b2ac34
+	trimbase = 43981a20
 	parent = upstream
 	previous = ba623ee0
