--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bfadf0ec
+	base = 4cfaae35
 	trimbase = 
 	parent = release/kinetic/schunk_modular_robotics
-	previous = 
+	previous = bfadf0ec
