--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cebb1b77
+	base = 9e0fbbf1
 	trimbase = 
 	parent = arch/kinetic/schunk_modular_robotics
-	previous = 
+	previous = cebb1b77
