--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = abfd03da
+	base = 267e8b50
 	trimbase = 
 	parent = release/kinetic/schunk_sdh
-	previous = 
+	previous = abfd03da
