--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c8bb834
+	base = a4387fec
 	trimbase = 
 	parent = arch/kinetic/schunk_sdh
-	previous = 
+	previous = 3c8bb834
