--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4d78295
+	base = 08abdcf8
 	trimbase = 
 	parent = release/kinetic/schunk_description
-	previous = 
+	previous = c4d78295
