--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c4bd200
+	base = e45bba54
 	trimbase = 
 	parent = arch/kinetic/schunk_description
-	previous = 
+	previous = 1c4bd200
