--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 04b2ac34
+	base = 76d4469a
 	trimbase = 
 	parent = release/kinetic/schunk_libm5api
-	previous = 
+	previous = 04b2ac34
