--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 54ae7c81
+	base = 2e4c6ff1
 	trimbase = 
 	parent = arch/kinetic/schunk_libm5api
-	previous = 
+	previous = 54ae7c81
