--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 90a575ef
+	base = 8d1f1967
 	trimbase = 
 	parent = release/kinetic/schunk_powercube_chain
-	previous = 
+	previous = 90a575ef
