--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5606c724
+	base = 4f49daed
 	trimbase = 
 	parent = arch/kinetic/schunk_powercube_chain
-	previous = 
+	previous = 5606c724
