--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 48de620f
+	base = 5db6283c
 	trimbase = 
 	parent = release/kinetic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = 48de620f
