--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5726174
+	base = 645dccc8
 	trimbase = 
 	parent = arch/kinetic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = e5726174
